byte-me-appengine/static/induviae_style.css
body{
  text-align: center;
  background-image: url(http://feelgrafix.com/data_images/out/28/984205-boston.jpg);
  font-family: "Bodoni MT", Didot, "Didot LT STD", "Book Antiqua", Garamond, "Times New Roman", serif;
  color: white;
  height: 100%;
  margin-top: 0px;
  margin-left: 0px;
  margin-right: 0px;
  margin-bottom: 0px;
  min-height: 100%;
  background-size: cover;
  background-attachment:fixed;
  background-repeat: no-repeat;
  background-position: center;
}

ul {
  list-style-type: none;
  margin: 0px ;
  padding: 0;
  overflow: hidden;
  background-color: black;
}
li {
    float: left;
}
.problem{
  color: red
}
#varinduviae {
  float: left;
  color: white;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
}
li a {
    display: block;
    color: white;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
}
li a:hover {
    background-color: gray;
}
.boxed {
  /*this code below makes the div translucent; Alexa, this applies to all of the
  html pages Adolfo*/
  background: rgba(0, 0, 0, 0.6);
  border-radius:25px;
  font-size: 20px;
  -moz-border-radius: 20px;
  -webkit-border-radius: 20px;
}
.welcome {
      font-size: 50px;
}
.blank_space{
  display: inline;
}
.mainbutton {
  background-color: #000000;
  color:#FFFFFF;
  padding: 10px;
  border-radius:25px;
  font-size: 20px;
  -moz-border-radius: 20px;
  -webkit-border-radius: 20px;
  margin-bottom: 250px;
}
.bottom{
  background-color: rgba(0, 0, 0, 0.6);
  padding: 5px;
  margin: 10px;
  border-radius:25px;
  font-size: 15px;
  -moz-border-radius: 20px;
  -webkit-border-radius: 20px;
}
.aboutus{
  position: static fixed;
  bottom: 0;
  left: 0;
  right: 0;
}
.clothing{
  width:150px
}
#blank_space{
  height: 0px
}
/* output page css starts here*/
#div_output{ /*Output page, this allows there
  to be a color between the text and the image*/
  color: white;
  padding: 10px;
  margin: 10px;
  border-radius:25px;
  font-size: 20px;
  -moz-border-radius: 20px;
  -webkit-border-radius: 20px;
}

a{
 color: white
}
.button { /*Input page, submit button*/
  background-color: #000000;
  color:#FFFFFF;
  padding: 10px;
  border-radius:25px;
  font-size: 20px;
  -moz-border-radius: 20px;
  -webkit-border-radius: 20px;
}
.button:hover{
  background-color: silver;
  color: #FFFFFF;
  font-size: 22px
}

form{ /*Input page so the boxes are next to
  the respective prompts*/
  display: inline;
}
#weather_table{ /*Output page table properties,
  entire weather table*/
    font-size: 30px;
}
.weather-rows {
    border-collapse:separate;
    border:solid black 1px;
    border-radius:6px;
    -moz-border-radius:6px;
    background: rgba(0, 0, 0, 0.8);
}
#weather_title {
  font-size: 40px;
}
#clothes_table{ /*Output page table properties,
  entire outfit table*/
  display: left;
}
th, td { /*Output page table properties, table cells*/
  border: 1px solid black;
  padding-bottom: 5px;
  vertical-align: top;
}
.tds {
  border-color: transparent;
}

.clothing-rows {
  border-collapse:separate;
  border:solid black 1px;
  border-radius:6px;
  -moz-border-radius:6px;
  background: rgba(0, 0, 0, 0.8);
}

.clothing-rows:hover, .weather-rows:hover {
      background-color: rgba(169, 169, 169, 0.9);
      color: black;
}

/*#rainy{ /*Output page background
  background-image: url("https://images4.alphacoders.com/831/83196.jpg");
}
#sunny{ /*Output page background
  background-image: url("https://enjoyingeachmoment.files.wordpress.com/2015/06/gkh-construction-sunny-skies-background.jpg");
}
#overcast{ /*Output page background
  background-image: url("https://lizasweeting.files.wordpress.com/2011/12/increasedexposureflltered.jpg");
}
#snowy{ /*Output page background
  background-image: url("http://wallpapercave.com/wp/kOdJfq7.jpg");
}
#hailing{ /*Output page background
  background-image: url("http://photovoltaicpoetry.com.au/wp-content/uploads/2013/11/North-Farm-stone-circle-hailing4.jpg");
}
#foggy{ /*Output page background
  background-image: url("http://static.tumblr.com/ab59c3ee543fa2ae5a5f565c35e983fc/d5jpbrj/N5imt6klr/tumblr_static_foggy_forest_1_1920.jpg");
}
#thunderstorm{ /*Output page background
  background-image: url("http://wallpapercave.com/wp/DPtedbJ.jpg");
}*/

